style/style-shared.css
/* ... */
.input:active, .input:focus, .input--secondary:active, .input--secondary:focus, .input__button:active, .input__button:focus, .input__select:active, .input__select:focus, .input__textarea:active, .input__textarea:focus, button:active, button:focus, input:active, input:focus, select:active, select:focus, textarea:active, textarea:focus {
	background-position: bottom left;
}
.input:hover, .input--secondary:active, .input--secondary:focus, .input__button:hover, .input__select:hover, .input__textarea:hover, button:hover, input:hover, select:hover, textarea:hover {
	background-size:
		300% 2px,
		0    2px,
		100% 2px;
}
.any--flex .input, .any--flex .input__button, .any--flex .input__select, .any--flex .input__textarea, .any--flex button, .any--flex input, .any--flex select, .any--flex textarea {
	max-width: 100%;
}
.input__row .input,
.input__row .input--secondary,
.input__row input {
	flex: 1;
	min-width: 100px;
}
.input__group .input,
.input__group .input--secondary,
.input__group input {
	border-radius: 0;
}
.input__group .input:first-of-type,
.input__group input:first-of-type,
.input__group .selectized {
	border-bottom-left-radius: 3px;
	border-top-left-radius: 3px;
}
.input__group .input:last-of-type,
.input__group input:last-of-type {
	border-bottom-right-radius: 3px;
	border-top-right-radius: 3px;
}
.input__group .input__checkbox-label ~ .input__checkbox-label {
	margin-left: 0.5rem;
}
.input--secondary, .input--secondary:active, .input--secondary:focus, .input--secondary:hover {
	box-shadow: inset 2rem 0 2rem -2rem rgba(0,0,0, 0.25);
}
.input--secondary:not(:focus):not(:active), .input--secondary::placeholder, .input--secondary::-webkit-input-placeholder {
	color: hsl(var(--text--secondary));
}
.input__button, button {
	background-image:
		linear-gradient(rgba(255,255,255,0.05),  rgba(255,255,255,0.05)),
		linear-gradient(rgba(255,255,255,0.1),   rgba(255,255,255,0.1)),
		linear-gradient(rgba(0,0,0, 0.25),       transparent),
		linear-gradient(to right, hsl(var(--interactive--secondary)) 50%, transparent 0);
	background-position: top, top, top, bottom right;
	background-size: 100% 2px, 0, 0, 0;
	color: hsl(var(--text));
	cursor: pointer;
	font-family: monospace, "brackets", メイリオ, Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "ＭＳ Ｐゴシック", "MS PGothic", serif;
	font-weight: normal;
	height: auto;
	text-transform: uppercase;
}
.input__button:hover, button:hover {
	background-size: 0, 100% 2px, 0, 0;
}
.input__button:focus, button:focus {
	background-position: top, top, top, bottom left;
	background-size: 100% 2px, 0, 0, 201% 2px;
}
.input__button:focus:not(:active):hover, button:focus:not(:active):hover {
	background-position: top, top, top, bottom left;
	background-size: 0, 100% 2px, 0, 201% 2px;
}
.input__button:active, button:active {
	background-position: top, top, top, bottom left;
	background-size: 0, 0, 100%, 0;
}
.input__checkbox {
	display: inline-block;
	max-width: 0;
	min-width: 0 !important;
	opacity: 0;
	overflow: hidden;
	width: 0;
}
.input__checkbox-label {
	background-image: none;
	color: hsl(var(--text--secondary));
	cursor: pointer;
	font-family: monospace, "brackets", メイリオ, Meiryo, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", Osaka, "ＭＳ Ｐゴシック", "MS PGothic", serif;
	margin-bottom: 0.25rem;
	margin-top: 0.25rem;
	padding: 0.25rem 0.5rem;
	user-select: none;
}
.input__checkbox-label--selected, .input__checkbox:checked + .input__checkbox-label {
	color: hsl(var(--text));
}
.input__checkbox-label--selected::before, .input__checkbox:checked + .input__checkbox-label::before, .input__checkbox:checked + .any__tag::before {
	opacity: 1;
}
.input__checkbox:not(:checked) + .input__checkbox-label::before {
	clip-path: url(#symbol__unchecked);
}
.input__checkbox:checked + .input__checkbox-label::before {
	clip-path: url(#symbol__checked);
}
.input__textarea, textarea {
	height: 4rem;
	line-height: 1.5;
}
.input__select, select[name][name][name] {
	box-sizing: content-box;
	height: calc(2rem - 4px);
	line-height: 2rem;
	padding-bottom: 2px;
	padding-top: 2px;
	vertical-align: middle;
	width: auto;
}
.input__option, select[name][name][name] option {
	height: calc(2rem - 4px);
	line-height: 2rem;
	vertical-align: middle;
}
select[multiple][multiple][multiple] {
	overflow: hidden;
}
select[multiple][multiple][multiple] option {
	display: inline;
	margin-right: 0.5rem;
}
select[multiple][multiple][multiple] option + option::before {
	background: hsl(var(--background--bold));
	color: hsl(var(--text));
	content: ",";
	display: inline-block;
	margin-left: -0.5rem;
	width: 0.5rem;
}
select[multiple][multiple][multiple] option::after {
	background: hsl(var(--background--bold));
	color: hsl(var(--text));
	content: attr(data-name);
	left: 0;
	position: absolute;
	top: 0;
	width: 100%;
}
[size][size][size] {
	min-width: 0;
}
[data-role="status"][class*=symbol] {
	align-self: center;
	margin-left: 0.5rem;
}
[disabled], [readonly] {
	opacity: 0.5;
}

